Updated styling and fixed dark mode issues

--- a/src/modules/pos/validator/components/ChangeCommission/Form/ChangeCommissionForm.css
+++ b/src/modules/pos/validator/components/ChangeCommission/Form/ChangeCommissionForm.css
@@ -9,9 +9,12 @@
   align-items: flex-start;
 
   & .header {
+    text-align: center;
+    color: var(--color-zodiac-blue);
+
     & h2 {
-      font-size: var(--font-size-h5);
-      font-weight: var(--font-weight-bold);
+      font-size: var(--font-size-h3);
+      font-weight: var(--font-weight-very-bold);
       margin: 0;
     }
   }
